--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <img src="images/projects/img4.JPG" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12">
-            <img src="images/projects/img5.JPG" class="img-fluid">
+            <img src="images/projects/img5.jpg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12">
-            <img src="images/projects/img6.JPG" class="img-fluid">
+            <img src="images/projects/img6.jpg" class="img-fluid">
           </div>
         </div>
       </div>
@@ -105,28 +105,28 @@
         <h1 class="text-center">Our Team</h1>
         <div class="row">
           <div class="col-lg-3 col-md-3 col-sm-12 item">
-            <img src="images/teams/manager.JPG" class="img-fluid" alt="team">
+            <img src="images/teams/manager.jpg" class="img-fluid" alt="team">
             <div class=teamMemName>
               Naman
             </div>
             <span class="text-muted">Manager</span>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-12 item">
-            <img src="images/teams/team-lead.JPG" class="img-fluid" alt="team">
+            <img src="images/teams/team-lead.jpg" class="img-fluid" alt="team">
             <div class=teamMemName>
               Lewis
             </div>
             <span class="text-muted">Team Lead</span>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-12 item">
-            <img src="images/teams/intern.JPG" class="img-fluid" alt="team">
+            <img src="images/teams/intern.jpg" class="img-fluid" alt="team">
             <div class=teamMemName>
               Brownie 
             </div>
             <span class="text-muted">Intern</span>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-12 item">
-            <img src="images/teams/co-lead.JPG" class="img-fluid" alt="team">
+            <img src="images/teams/co-lead.jpg" class="img-fluid" alt="team">
             <div class=teamMemName>
               Pop 
             </div>
